vc2-salesforce-version/force-app/main/default/objects/Artisan_Economy__c/fields/Artisan_Type__c.field-meta.xml
<CustomField>
    <fullName>Artisan_Type__c</fullName>
    <label>Artisan Type</label>
    <type>Text</type>
    <length>100</length>
</CustomField>