vc2-salesforce-version/force-app/main/default/objects/Artisan_Economy__c/fields/Country_Economy__c.field-meta.xml
<CustomField>
    <fullName>Country_Economy__c</fullName>
    <label>Country Economy</label>
    <type>Lookup</type>
    <referenceTo>Country_Economy__c</referenceTo>
    <relationshipName>Artisan_Economies</relationshipName>
    <required>true</required>
    <indexLookup>true</indexLookup>
</CustomField>