vc2-salesforce-version/force-app/main/default/objects/Artisan_Economy__c/fields/Province_Economy__c.field-meta.xml
<CustomField>
    <fullName>Province_Economy__c</fullName>
    <label>Province Economy</label>
    <type>Lookup</type>
    <referenceTo>Province_Economy__c</referenceTo>
    <relationshipName>Artisan_Economies</relationshipName>
    <required>true</required>
    <indexLookup>true</indexLookup>
</CustomField>