vc2-salesforce-version/force-app/main/default/objects/Artisan_Economy__c/fields/Spending__c.field-meta.xml
<CustomField>
    <fullName>Spending__c</fullName>
    <label>Spending (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>