vc2-salesforce-version/force-app/main/default/objects/Artisan_Economy__c/fields/State_Economy__c.field-meta.xml
<CustomField>
    <fullName>State_Economy__c</fullName>
    <label>State Economy</label>
    <type>Lookup</type>
    <referenceTo>State_Economy__c</referenceTo>
    <relationshipName>Artisan_Economies</relationshipName>
    <indexLookup>true</indexLookup>
</CustomField>